<resources>
    <string name="app_name">saleem 0.0.2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">محمد عبد الله</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="item_1">الرئيسية</string>
    <string name="item_2">الفنيين</string>
    <string name="item_3">الرسائل</string>
    <string name="item_4">الأسئلة الشائعة</string>
    <string name="item_5">حول</string>
    <string name="item_6">تواصل معنا</string>
    <string name="item_7">الاعدادات</string>
    <string name="item_8">تسجيل الخروج</string>


    <string name="home_second">Home Second</string>

    <string name="google_maps_api_key">AIzaSyCBY5Knsy0p2iJB0PCJkvKoKCxZrTXH598 </string>
    <string name="hintExmple">وصف المشكلة</string>

</resources>
